introduction of rocksdb for persistence

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ else()
     message(FATAL_ERROR "Boost not found. Could not build this app.")
 endif()
 
-target_link_libraries( ocv_microservice_crow ${OpenCV_LIBS} pthread )
+target_link_libraries( ocv_microservice_crow ${OpenCV_LIBS} pthread -lrocksdb )
 
 if (BUILD_TESTS)
     find_package(GTest)
