--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,7 @@ else()
     message(FATAL_ERROR "Boost not found. Could not build this app.")
 endif()
 
-target_link_libraries( ocv_microservice_crow ${OpenCV_LIBS} pthread -lrocksdb -lv8)
+target_link_libraries( ocv_microservice_crow ${OpenCV_LIBS} pthread -lrocksdb -lv8 -lcurl)
 
 if (BUILD_TESTS)
     find_package(GTest)
