Upgrade Dockerfile to Ubuntu 21.04
* Dockerfile fixes to upgrade to Ubuntu 21.04
* Add new v8, rocksdb and zmq dependencies in docker
* Added SHA verification on dependency download archives
* Compilation fixes for new libnode-dev 12.21.0 that ships with Ubuntu
  21.04
* Whitespace fixes in README
* Remove in-source build files that accidentally got committed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,11 @@ file(GLOB ocv_microservice_crow_SOURCES
 )
 
 add_executable( ocv_microservice_crow ${ocv_microservice_crow_SOURCES} )
+target_include_directories(
+    ocv_microservice_crow
+    PRIVATE
+    /usr/include/node
+)
 
 set(CROW_ROOT_DIR PATH "${PROJECT_SOURCE_DIR}/third-party/crow")
 
