--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ add_executable( ocv_microservice_crow ${ocv_microservice_crow_SOURCES} )
 target_include_directories(
     ocv_microservice_crow
     PRIVATE
-    /usr/include/node
+    /usr/include/v8
 )
 
 set(CROW_ROOT_DIR PATH "${PROJECT_SOURCE_DIR}/third-party/crow")
